--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Terraform apply
         id: apple
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false -parallelism=1 planfile
+        run: terraform destroy -auto-approve -input=false -parallelism=1 planfile
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -70,12 +70,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
     
-      - name: Get kube config file
-        id: gitconfig
-        if: steps.apple.outcome == 'success'
-        run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
+    #   - name: Get kube config file
+    #     id: gitconfig
+    #     if: steps.apple.outcome == 'success'
+    #     run: aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER }}
     
-      - name: Install Ingress Controller
-        if: steps.apple.outcome == 'success' && steps.getconfig.outcome == 'success'
-        run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.11.2/deploy/static/provider/aws/deploy.yaml
+    #   - name: Install Ingress Controller
+    #     if: steps.apple.outcome == 'success' && steps.getconfig.outcome == 'success'
+    #     run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.11.2/deploy/static/provider/aws/deploy.yaml
 
