--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -58,17 +58,22 @@ jobs:
         if: steps.plan.outcome == 'failure'
         run: exit 1
 
-      - name: Terraform apply
-        id: apple
+    #   - name: Terraform apply
+    #     id: apple
+    #     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    #     run: terraform destroy -auto-approve -input=false -parallelism=1 planfile
+
+      - name: Terraform destroy
+        id: destroy
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform destroy -auto-approve -input=false -parallelism=1 planfile
+        run: terraform destroy -auto-approve -input=false 
       
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+    #   - name: Configure AWS credentials
+    #     uses: aws-actions/configure-aws-credentials@v4
+    #     with:
+    #       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    #       aws-region: ${{ env.AWS_REGION }}
     
     #   - name: Get kube config file
     #     id: gitconfig
